tests/fixtures/pass/partial_application.sc
let add(left: i32)(right: i32): i32 = left + right

let main(): i32 = {
  let add_two = add(2)
  add_two(40)
}
