tests/fixtures/fail/constructor_mixed_arguments.sc
let Pair = struct { left: i32, right: i32 }

let main(): i32 = {
  let pair = Pair { left: left: 40, right: 2 }
  pair.left + pair.right
}
